--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 #sequence {
     width: 40vw;
 }
+
+#table-results {
+    border-collapse: collapse;
+}
+
+#table-results td, th {
+    border: black solid 1px;
+    padding: 5px 15px;
+}
