--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 .table-results {
     border-collapse: collapse;
+    margin-top: 20px;
+    width: 95%;
 }
 
 .table-results td, th {
@@ -11,7 +13,29 @@
     padding: 5px 15px;
 }
 
+.legend {
+    text-align: center;
+}
+
 .chart {
-    width: 800px;
-    height: 600px;
+    width: 50vw;
+}
+
+.algo-results {
+    width: 40vw;
+    margin-top: 2%;
+}
+
+.remove-button, .restore-button {
+    display: none;
+}
+
+.progression {
+    width: 62%;
+    margin-left: 30px;
+}
+
+.kmr {
+    display: flex;
+    justify-content: space-around;
 }
