--- a/style.css
+++ b/style.css
@@ -1,11 +1,123 @@
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    font-family: 'Montserrat';
+    font-weight: 300;
+}
+
+header {
+    background-color: #194A8D;
+    height: 12vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header h1 {
+    color: aliceblue;
+    font-weight: 400;
+    font-size: 3em;
+}
+
+.site {
+    display: flex;
+    justify-content: flex-start;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    width: 15vw;
+    position: sticky;
+    top: 25vh;
+}
+
+.navi div {
+    margin: 25px 10px;
+    width: 60px;
+    height: 60px;
+}
+
+.navi div a {
+    border-radius: 50%;
+    background-color: #194a8dc4;
+    text-decoration: none;
+    text-align: center;
+    color: aliceblue;
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3em;
+}
+
+.navi div a:visited {
+    text-decoration: none;
+}
+
+.navi a:hover {
+    background-color: #194A8D;
+}
+
+
+.navi .pop-up-text {
+  visibility: hidden;
+  width: 120px;
+  background-color: #194A8D;
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  z-index: 1;
+  position: relative;
+  display: inline-block;
+  /* left: 70px;
+  top: -55px; */
+}
+
+.navi .pop-up1 {
+    left: 70px;
+    top: -55px;
+}
+
+.navi .pop-up2, .navi .pop-up3 {
+    left: 70px;
+    top: -45px;
+}
+
+.pre:hover .pop-up-text {
+  visibility: visible;
+}
+
+
+.content {
+    width: 80vw;
+}
+
 .sequence {
     width: 40vw;
+}
+
+.kmr {
+    display: flex;
+    justify-content: space-between;
+}
+
+.chart {
+    width: 42vw;
 }
 
 .table-results {
     border-collapse: collapse;
     margin-top: 20px;
-    width: 95%;
+    width: 100%;
 }
 
 .table-results td, th {
@@ -17,13 +129,9 @@
     text-align: center;
 }
 
-.chart {
-    width: 50vw;
-}
 
-.algo-results {
-    width: 40vw;
-    margin-top: 2%;
+.perf-results {
+    width: 35vw;
 }
 
 .remove-button, .restore-button {
@@ -31,11 +139,6 @@
 }
 
 .progression {
-    width: 62%;
+    width: 61%;
     margin-left: 30px;
-}
-
-.kmr {
-    display: flex;
-    justify-content: space-around;
 }
