--- a/style.css
+++ b/style.css
@@ -25,12 +25,17 @@ header h1 {
 .site {
     display: flex;
     justify-content: flex-start;
+    margin: 20px 0;
+}
+
+.navsticky {
+    width: 15vw;
 }
 
 nav {
+    margin-left: 10px;
     display: flex;
     flex-direction: column;
-    width: 15vw;
     position: sticky;
     top: 25vh;
 }
@@ -142,3 +147,25 @@ nav {
     width: 61%;
     margin-left: 30px;
 }
+
+footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 9vh;
+    background-color: #194A8D;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .algoText {
+    margin-left: 10vh;
+    width: 83%;
+  }
+
+  .testAlgoResult {
+    margin-left: 10vh;
+    width: 83%;
+  }
